[gd_scene load_steps=20 format=3 uid="uid://dfnh5n8ng1tpl"]

[ext_resource type="Theme" uid="uid://dy4igcn6htdgd" path="res://themes/base_theme.tres" id="1_crqh1"]
[ext_resource type="Script" uid="uid://b6x267o2sr3eg" path="res://status_indicator.gd" id="1_l37un"]
[ext_resource type="Script" uid="uid://cv6rhfwlo1di0" path="res://addons/nodewebsockets/websocket_server.gd" id="3_crqh1"]
[ext_resource type="Script" uid="uid://dprp7lkh7s5j4" path="res://addons/nodewebsockets/websocket_client.gd" id="4_pey4h"]
[ext_resource type="Script" uid="uid://q5hqp5opgvmw" path="res://virtual_keyboard_margin_container.gd" id="5_pey4h"]
[ext_resource type="Script" uid="uid://bd8s5r22jl2ma" path="res://customs/resources/BetterDPITexture.gd" id="6_2q5ww"]
[ext_resource type="Texture2D" uid="uid://dw5h7i2glbh41" path="res://icon.svg" id="6_uld1r"]
[ext_resource type="Script" uid="uid://bgqglerkcylxx" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="7_mygap"]
[ext_resource type="Script" uid="uid://b7h0k2h2qwlqv" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="8_uld1r"]
[ext_resource type="Script" uid="uid://bvac0hfbwr7qm" path="res://input_text_editor.gd" id="10_rrnmq"]

[sub_resource type="CameraTexture" id="CameraTexture_2q5ww"]

[sub_resource type="DPITexture" id="DPITexture_s3aps"]
_source = "<svg width=\"64px\" height=\"64px\" viewBox=\"0 0 24 24\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><g id=\"SVGRepo_bgCarrier\" stroke-width=\"0\"></g><g id=\"SVGRepo_tracerCarrier\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></g><g id=\"SVGRepo_iconCarrier\"> <path d=\"M12 12H12.01M12 6H12.01M12 18H12.01M13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12ZM13 18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18C11 17.4477 11.4477 17 12 17C12.5523 17 13 17.4477 13 18ZM13 6C13 6.55228 12.5523 7 12 7C11.4477 7 11 6.55228 11 6C11 5.44772 11.4477 5 12 5C12.5523 5 13 5.44772 13 6Z\" stroke=\"#ffffff\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path> </g></svg>"
base_scale = 0.5
script = ExtResource("6_2q5ww")
source = "<svg width=\"64px\" height=\"64px\" viewBox=\"0 0 24 24\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><g id=\"SVGRepo_bgCarrier\" stroke-width=\"0\"></g><g id=\"SVGRepo_tracerCarrier\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></g><g id=\"SVGRepo_iconCarrier\"> <path d=\"M12 12H12.01M12 6H12.01M12 18H12.01M13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12ZM13 18C13 18.5523 12.5523 19 12 19C11.4477 19 11 18.5523 11 18C11 17.4477 11.4477 17 12 17C12.5523 17 13 17.4477 13 18ZM13 6C13 6.55228 12.5523 7 12 7C11.4477 7 11 6.55228 11 6C11 5.44772 11.4477 5 12 5C12.5523 5 13 5.44772 13 6Z\" stroke=\"#ffffff\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path> </g></svg>"
metadata/_custom_type_script = "uid://bd8s5r22jl2ma"

[sub_resource type="Resource" id="Resource_rrnmq"]
script = ExtResource("8_uld1r")

[sub_resource type="Resource" id="Resource_d5wuc"]
script = ExtResource("8_uld1r")

[sub_resource type="DPITexture" id="DPITexture_2q5ww"]
_source = "<svg fill=\"#ffffff\" width=\"64px\" height=\"64px\" viewBox=\"0 0 24 24\" id=\"paper-clip-bottom-right\" data-name=\"Line Color\" xmlns=\"http://www.w3.org/2000/svg\" class=\"icon line-color\"><g id=\"SVGRepo_bgCarrier\" stroke-width=\"0\"></g><g id=\"SVGRepo_tracerCarrier\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></g><g id=\"SVGRepo_iconCarrier\"><path id=\"primary\" d=\"M15.27,5.23l3.95,3.95a6.1,6.1,0,0,1,0,8.61h0a6.09,6.09,0,0,1-8.6,0L4.19,11.36a4,4,0,0,1,0-5.74h0a4.06,4.06,0,0,1,5.73,0l6.74,6.74a2,2,0,0,1,0,2.87h0a2,2,0,0,1-2.87,0l-7-7\" style=\"fill: none; stroke: #ffffff; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;\"></path></g></svg>"
base_scale = 0.5
script = ExtResource("6_2q5ww")
source = "<svg fill=\"#ffffff\" width=\"64px\" height=\"64px\" viewBox=\"0 0 24 24\" id=\"paper-clip-bottom-right\" data-name=\"Line Color\" xmlns=\"http://www.w3.org/2000/svg\" class=\"icon line-color\"><g id=\"SVGRepo_bgCarrier\" stroke-width=\"0\"></g><g id=\"SVGRepo_tracerCarrier\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></g><g id=\"SVGRepo_iconCarrier\"><path id=\"primary\" d=\"M15.27,5.23l3.95,3.95a6.1,6.1,0,0,1,0,8.61h0a6.09,6.09,0,0,1-8.6,0L4.19,11.36a4,4,0,0,1,0-5.74h0a4.06,4.06,0,0,1,5.73,0l6.74,6.74a2,2,0,0,1,0,2.87h0a2,2,0,0,1-2.87,0l-7-7\" style=\"fill: none; stroke: #ffffff; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;\"></path></g></svg>"
metadata/_custom_type_script = "uid://bd8s5r22jl2ma"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2q5ww"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mygap"]
draw_center = false
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="DPITexture" id="DPITexture_rrnmq"]
_source = "<svg width=\"64px\" height=\"64px\" viewBox=\"0 0 24 24\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><g id=\"SVGRepo_bgCarrier\" stroke-width=\"0\"></g><g id=\"SVGRepo_tracerCarrier\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></g><g id=\"SVGRepo_iconCarrier\"> <path d=\"M20 12V13C20 17.4183 16.4183 21 12 21C7.58172 21 4 17.4183 4 13V12M12 17C9.79086 17 8 15.2091 8 13V7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7V13C16 15.2091 14.2091 17 12 17Z\" stroke=\"#ffffff\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path> </g></svg>"
base_scale = 0.5
script = ExtResource("6_2q5ww")
source = "<svg width=\"64px\" height=\"64px\" viewBox=\"0 0 24 24\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"><g id=\"SVGRepo_bgCarrier\" stroke-width=\"0\"></g><g id=\"SVGRepo_tracerCarrier\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></g><g id=\"SVGRepo_iconCarrier\"> <path d=\"M20 12V13C20 17.4183 16.4183 21 12 21C7.58172 21 4 17.4183 4 13V12M12 17C9.79086 17 8 15.2091 8 13V7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7V13C16 15.2091 14.2091 17 12 17Z\" stroke=\"#ffffff\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path> </g></svg>"
metadata/_custom_type_script = "uid://bd8s5r22jl2ma"

[sub_resource type="DPITexture" id="DPITexture_mygap"]
_source = "<svg width=\"64px\" height=\"64px\" viewBox=\"0 0 24 24\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\" stroke=\"#ffffff\"><g id=\"SVGRepo_bgCarrier\" stroke-width=\"0\"></g><g id=\"SVGRepo_tracerCarrier\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></g><g id=\"SVGRepo_iconCarrier\"> <path d=\"M11.5003 12H5.41872M5.24634 12.7972L4.24158 15.7986C3.69128 17.4424 3.41613 18.2643 3.61359 18.7704C3.78506 19.21 4.15335 19.5432 4.6078 19.6701C5.13111 19.8161 5.92151 19.4604 7.50231 18.7491L17.6367 14.1886C19.1797 13.4942 19.9512 13.1471 20.1896 12.6648C20.3968 12.2458 20.3968 11.7541 20.1896 11.3351C19.9512 10.8529 19.1797 10.5057 17.6367 9.81135L7.48483 5.24303C5.90879 4.53382 5.12078 4.17921 4.59799 4.32468C4.14397 4.45101 3.77572 4.78336 3.60365 5.22209C3.40551 5.72728 3.67772 6.54741 4.22215 8.18767L5.24829 11.2793C5.34179 11.561 5.38855 11.7019 5.407 11.8459C5.42338 11.9738 5.42321 12.1032 5.40651 12.231C5.38768 12.375 5.34057 12.5157 5.24634 12.7972Z\" stroke=\"#ffffff\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path> </g></svg>"
base_scale = 0.5
script = ExtResource("6_2q5ww")
source = "<svg width=\"64px\" height=\"64px\" viewBox=\"0 0 24 24\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\" stroke=\"#ffffff\"><g id=\"SVGRepo_bgCarrier\" stroke-width=\"0\"></g><g id=\"SVGRepo_tracerCarrier\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></g><g id=\"SVGRepo_iconCarrier\"> <path d=\"M11.5003 12H5.41872M5.24634 12.7972L4.24158 15.7986C3.69128 17.4424 3.41613 18.2643 3.61359 18.7704C3.78506 19.21 4.15335 19.5432 4.6078 19.6701C5.13111 19.8161 5.92151 19.4604 7.50231 18.7491L17.6367 14.1886C19.1797 13.4942 19.9512 13.1471 20.1896 12.6648C20.3968 12.2458 20.3968 11.7541 20.1896 11.3351C19.9512 10.8529 19.1797 10.5057 17.6367 9.81135L7.48483 5.24303C5.90879 4.53382 5.12078 4.17921 4.59799 4.32468C4.14397 4.45101 3.77572 4.78336 3.60365 5.22209C3.40551 5.72728 3.67772 6.54741 4.22215 8.18767L5.24829 11.2793C5.34179 11.561 5.38855 11.7019 5.407 11.8459C5.42338 11.9738 5.42321 12.1032 5.40651 12.231C5.38768 12.375 5.34057 12.5157 5.24634 12.7972Z\" stroke=\"#ffffff\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"></path> </g></svg>"
metadata/_custom_type_script = "uid://bd8s5r22jl2ma"

[node name="StatusIndicator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_crqh1")
script = ExtResource("1_l37un")

[node name="WebSocketServer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_crqh1")
bind_ip = "192.168.0.237"
metadata/_custom_type_script = "uid://cv6rhfwlo1di0"

[node name="WebSocketClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_pey4h")
url_server = "ws://192.168.0.237:44380"
metadata/_custom_type_script = "uid://dprp7lkh7s5j4"

[node name="VirtualKeyboardMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_pey4h")

[node name="TextureRect" type="TextureRect" parent="VirtualKeyboardMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("CameraTexture_2q5ww")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VirtualKeyboardMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VirtualKeyboardMarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_uld1r")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "GDChat"

[node name="Separator" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Button" type="MenuButton" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = SubResource("DPITexture_s3aps")
flat = false
icon_alignment = 1
item_count = 2
popup/item_0/text = "Settings"
popup/item_0/id = 0
popup/item_1/text = "About"
popup/item_1/id = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
script = ExtResource("7_mygap")
wheel_scroll_damper = SubResource("Resource_rrnmq")
dragging_scroll_damper = SubResource("Resource_d5wuc")
metadata/_custom_type_script = "uid://bgqglerkcylxx"

[node name="VBoxContainer" type="VBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer2" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_uld1r")
expand_mode = 3
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Waifu"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "AAAAAAAAAA[b]AAAAAAAA[/b][rainbow]AAAAAAAAAAAAA[/rainbow]"
fit_content = true
vertical_alignment = 1

[node name="Separator" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Separator2" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer2" type="MarginContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer2" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_uld1r")
expand_mode = 3
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Waifu"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "AAAAAAAAAA[b]AAAAAAAA[/b][rainbow]AAAAAAAAAAAAA[/rainbow]"
fit_content = true
vertical_alignment = 1

[node name="Separator" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Separator2" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer3" type="MarginContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer2" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_uld1r")
expand_mode = 3
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Waifu"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "AAAAAAAAAA[b]AAAAAAAA[/b][rainbow]AAAAAAAAAAAAA[/rainbow]"
fit_content = true
vertical_alignment = 1

[node name="Separator" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Separator2" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="MarginContainer4" type="MarginContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="Separator" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Separator2" type="Control" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer2" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "Waifu"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_uld1r")
expand_mode = 3
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VirtualKeyboardMarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "AAAAAAAAAA[b]AAAAAAAA[wave]AAAAAAAAAAAAA[/wave][/b][rainbow]AAAAAAAAAAAAA[wave]AAAAAAAAAAAAA[/wave][/rainbow]"
fit_content = true
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="MediaSendButton" type="Button" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
icon = SubResource("DPITexture_2q5ww")

[node name="InputTextEditor" type="CodeEdit" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_2q5ww")
theme_override_styles/focus = SubResource("StyleBoxFlat_mygap")
placeholder_text = "Write here..."
backspace_deletes_composite_character_enabled = true
wrap_mode = 1
scroll_smooth = true
caret_blink = true
caret_blink_interval = 0.33
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("10_rrnmq")

[node name="RecordAudioButton" type="Button" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
icon = SubResource("DPITexture_rrnmq")
icon_alignment = 1

[node name="MessageSendButton" type="Button" parent="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
icon = SubResource("DPITexture_mygap")
icon_alignment = 1

[connection signal="client_connected" from="WebSocketServer" to="." method="_on_web_socket_server_client_connected"]
[connection signal="client_disconnected" from="WebSocketServer" to="." method="_on_web_socket_server_client_disconnected"]
[connection signal="data_received" from="WebSocketServer" to="." method="_on_web_socket_server_data_received"]
[connection signal="tree_exiting" from="WebSocketServer" to="." method="_on_web_socket_server_tree_exiting"]
[connection signal="data_received" from="WebSocketClient" to="." method="_on_web_socket_client_data_received"]
[connection signal="tree_exiting" from="WebSocketClient" to="." method="_on_web_socket_client_tree_exiting"]
[connection signal="pressed" from="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/MediaSendButton" to="." method="_on_media_send_button_pressed"]
[connection signal="text_changed" from="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/InputTextEditor" to="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/InputTextEditor" method="_on_text_changed"]
[connection signal="text_set" from="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/InputTextEditor" to="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/InputTextEditor" method="_on_text_set"]
[connection signal="pressed" from="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/RecordAudioButton" to="." method="_on_record_audio_button_pressed"]
[connection signal="pressed" from="VirtualKeyboardMarginContainer/VBoxContainer/PanelContainer2/HBoxContainer/MessageSendButton" to="." method="_on_message_send_button_pressed"]
